# project-group-30

./: LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  command_suggester.py  presenter.py  prompt_manager.py  styles.py  table_renderer.py
files/: addressbook.pkl
handlers/: birthday_service.py  command_handler.py  decorators.py  errors.py
models/: address.py  birthday.py  contact.py  email.py  field.py  name.py  note.py  phone.py
repositories/: contact_repository.py
search/: search_service.py
storage/: __init_.py  factory.py  json_storage.py  pickle_storage.py  storage_error_decorators.py  storage_interface.py
utils/: utils.py
